force-app/main/default/objects/Seeding_Template__mdt/Seeding_Template__mdt.object-meta.xml
<CustomObject>
    <label>Seeding Template</label>
    <pluralLabel>Seeding Templates</pluralLabel>
</CustomObject>