force-app/main/default/objects/Seeding_Template__mdt/fields/Number_of_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_records__c</fullName>
    <label>Number of records to create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>