force-app/main/default/objects/Seeding_Template__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>