force-app/main/default/objects/Seeding_Template__mdt/fields/Object_Shape__c.field-meta.xml
<CustomField>
    <fullName>Object_Shape__c</fullName>
    <label>Object Shape</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>